--- a/backup/privacy-policy/index.html
+++ b/backup/privacy-policy/index.html
@@ -7,10 +7,16 @@
     />
 
     <title>시대기물연구소 파도 • Privacy</title>
-    <meta name="description" content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다." />
+    <meta
+      name="description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
 
     <meta itemprop="name" content="PADO" />
-    <meta name="keywords" content="PADO, 시대기물연구소, 파도, 새로운 기물, 기물, 다기, 다구, 차도구" />
+    <meta
+      name="keywords"
+      content="PADO, 시대기물연구소, 파도, 새로운 기물, 기물, 다기, 다구, 차도구"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- favicon -->
@@ -45,14 +51,20 @@
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:site_name" content="PADO" />
     <meta property="og:title" content="PADO" />
-    <meta property="og:description" content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다." />
+    <meta
+      property="og:description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
     <meta property="og:image" content="../assets/favicon/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PADO" />
-    <meta name="twitter:description" content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다." />
+    <meta
+      name="twitter:description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
     <meta name="twitter:image" content="../assets/favicon/og-image.jpg" />
 
     <!-- web-app-image -->
@@ -154,20 +166,8 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              The Institute of Object 〈PADO〉              <br />
-              <br />
-              In Sansuhwa Teahouse
-              <br />
-
-              21-14, Hannam-daero 20gil,
-              <br />
-
-              Yongsan-gu, Seoul
-              <br /><br />
-              <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
-              <br />
-
-              +82 2 749 3138
+              The Institute of Object 〈PADO〉 <br />
+              Seoul, Korea
             </p>
           </div>
 
@@ -211,7 +211,7 @@
           </div> -->
 
           <div class="menu__item pages">
-               <div class="pages__item">
+            <div class="pages__item">
               <button id="theme-toggle"><em></em> Dark/Light mode</button>
             </div>
 
@@ -236,11 +236,7 @@
       <main id="swup" class="transition-fade" data-swup="1">
         <div id="general__header" class="page__header">
           <div class="page__title">
-            <a
-              href=""
-              target="_self"
-              rel="noopener noreferrer"
-            >
+            <a href="" target="_self" rel="noopener noreferrer">
               Privacy Policy
             </a>
           </div>
