--- a/index.html
+++ b/index.html
@@ -201,20 +201,8 @@
           <div class="menu__item contact">
             <p>
               The Institute of Object 〈PADO〉 <br />
-              <br />
-              In Sansuhwa Teahouse
-              <br />
 
-              21-14, Hannam-daero 20gil,
-              <br />
-
-              Yongsan-gu, Seoul
-              <br /><br />
-
-              <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
-              <br />
-
-              +82 2 749 3138
+              Seoul, Korea
             </p>
           </div>
 
@@ -268,7 +256,7 @@
               </span>
             </a>
 
-             <a href="./newflavorsoftea/1-1-hwk-t/" class="projectlist__item">
+            <a href="./newflavorsoftea/1-1-hwk-t/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-T</p>
