--- a/information/index.html
+++ b/information/index.html
@@ -170,19 +170,8 @@
           <div class="menu__item contact">
             <p>
               The Institute of Object 〈PADO〉 <br />
-              <br />
-              In Sansuhwa Teahouse
-              <br />
-
-              21-14, Hannam-daero 20gil,
-              <br />
-
-              Yongsan-gu, Seoul
-              <br /><br />
-              <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
-              <br />
-
-              +82 2 749 3138
+              Seoul, Korea
+              
             </p>
           </div>
 
@@ -503,7 +492,7 @@
                     href="https://www.sansuhwa.com"
                     target="_blank"
                     rel="noopener noreferrer"
-                    ><span>External Link:</span> www.sansuhwa.com</a
+                    >www.sansuhwa.com</a
                   >
                 </p>
               </div>
@@ -517,7 +506,7 @@
                     href="https://archive.sansuhwa.com"
                     target="_blank"
                     rel="noopener noreferrer"
-                    ><span>External Link:</span> www.archive.sansuhwa.com</a
+                    >www.archive.sansuhwa.com</a
                   >
                 </p>
               </div>
@@ -531,7 +520,7 @@
                     href="https://www.instagram.com/sansuhwatea"
                     target="_blank"
                     rel="noopener noreferrer"
-                    ><span>External Link:</span> @sansuhwatea</a
+                    >@sansuhwatea</a
                   >
                 </p>
               </div>
