--- a/legal-notice/index.html
+++ b/legal-notice/index.html
@@ -170,19 +170,8 @@
           <div class="menu__item contact">
             <p>
               The Institute of Object 〈PADO〉 <br />
-              <br />
-              In Sansuhwa Teahouse
-              <br />
-
-              21-14, Hannam-daero 20gil,
-              <br />
-
-              Yongsan-gu, Seoul
-              <br /><br />
-              <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
-              <br />
-
-              +82 2 749 3138
+              Seoul, Korea
+              
             </p>
           </div>
 
