--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
       </header>
 
       <aside>
-        <dialog open>
+        <dialog id="mainPopup" class="fade" open>
           <p>
             <a href="./information/#video1"
-              ><span>◆</span> 1-1. 새로운 차의 맛: 작가와의 만남 영상 보기</a
+              ><span>◆</span> 1-1. 새로운 차의 맛: 작가와의 만남</a
             >
           </p>
           <form method="dialog">
-            <button autofocus>Close</button>
+            <button id="closeDialog" autofocus>Close</button>
           </form>
         </dialog>
       </aside>
@@ -2433,7 +2433,7 @@
     <script src="./assets/js/slick.min.js"></script>
     <script src="./assets/js/jquery.zoom.min.js"></script>
     <script src="./assets/js/functions.min.js"></script>
-    <!-- <script src="./assets/js/functions.js"></script> -->
+    <script src="./assets/js/detail-functions.js"></script>
     <script src="./assets/js/bundle.js"></script>
 
     <script src="./assets/js/main-functions.js"></script>
